Fix menu overlap

--- a/MagnumWeb/wwwroot/css/site.css
+++ b/MagnumWeb/wwwroot/css/site.css
@@ -73,11 +73,11 @@ body {
 }
 
 .main_menu_area {
-    position: absolute;
     z-index: 1000;
     left: 0px;
     width: 100%;
     padding-top: 15px;
+    background-color: #151515;
 }
 
 .navbar {
